UI structure change

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,23 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <title>CardStaxx</title>
+    <style>
+      /* CSS Reset for full height layout */
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      html, body {
+        height: 100%;
+        width: 100%;
+        overflow: hidden; /* Prevent body scrollbars */
+      }
+      #root {
+        height: 100vh;
+        width: 100vw;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
